<resources>
    <string name="app_name">Maréu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Select_a_date">Select a date</string>
    <string name="Select_a_Room">Select a room</string>
    <string name="Clear">Clear</string>
    <string name="OK">OK</string>
    <string name="ON">ON</string>
    <string name="VALID">Valid</string>
    <string name="DATE">DD/MM/YYYY</string>
    <string name="MM">MM</string>
    <string name="DDMMYYYY">DD/MM/YYYY</string>
    <string name="HOUR">HH:MM</string>
    <string name="set_mail_participants">Set mail particimants</string>
    <string name="filter">filter</string>
    <string name="SALLE">SALLE</string>
    <string name="name_meeting">name meeting</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="gravitySpinner">center_horizontal</string>
    <string name="textSpinner">salle</string>

</resources>
