<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/board_view"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_date_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/date_pickerr"
                android:layout_alignParentTop="true"
                android:background="@drawable/board_view"
                android:gravity="center">

                <TextView
                    android:id="@+id/textdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/DDMMYYYY"
                    android:textColor="#000000"
                    android:textSize="@dimen/textealertdialog"></TextView>

            </LinearLayout>

            <DatePicker
                android:id="@+id/date_pickerr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:calendarViewShown="false"
                android:clickable="true"

                android:datePickerMode="spinner"
                android:focusable="true">

            </DatePicker>
        </RelativeLayout>

        <Spinner
            android:id="@+id/spinner_fiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/board_view"
            android:gravity="center_horizontal">

        </Spinner>

        <RelativeLayout
            android:id="@+id/layout_button_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:text="@string/Clear"
                android:textColor="@color/colorOnSecondary"
                android:textSize="@dimen/texte_bouton" />

            <Button
                android:id="@+id/button_OK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/OK"
                android:textColor="@color/colorOnSecondary"
                android:textSize="@dimen/texte_bouton"
                tools:ignore="RtlHardcoded"></Button>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>